--- a/ui/ui.ui
+++ b/ui/ui.ui
@@ -14,7 +14,7 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="labelNaviBar">
     <property name="geometry">
      <rect>
       <x>0</x>
@@ -33,7 +33,7 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
+   <widget class="QLabel" name="labelPlayB">
     <property name="geometry">
      <rect>
       <x>0</x>
@@ -52,7 +52,7 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="label_3">
+   <widget class="QLabel" name="labelAlbumPic">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -71,7 +71,7 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="label_4">
+   <widget class="QLabel" name="labelTrack1B">
     <property name="enabled">
      <bool>true</bool>
     </property>
@@ -93,7 +93,7 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="label_5">
+   <widget class="QLabel" name="labelTrack3B">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -112,7 +112,7 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="label_6">
+   <widget class="QLabel" name="labelTrack5B">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -131,7 +131,7 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="label_7">
+   <widget class="QLabel" name="labelTrack7B">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -150,64 +150,7 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="label_8">
-    <property name="geometry">
-     <rect>
-      <x>288</x>
-      <y>730</y>
-      <width>34</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="pixmap">
-     <pixmap>images/last.png</pixmap>
-    </property>
-    <property name="scaledContents">
-     <bool>true</bool>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_9">
-    <property name="geometry">
-     <rect>
-      <x>385</x>
-      <y>715</y>
-      <width>50</width>
-      <height>50</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="pixmap">
-     <pixmap>images/play.png</pixmap>
-    </property>
-    <property name="scaledContents">
-     <bool>true</bool>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_10">
-    <property name="geometry">
-     <rect>
-      <x>488</x>
-      <y>730</y>
-      <width>34</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="pixmap">
-     <pixmap>images/next.png</pixmap>
-    </property>
-    <property name="scaledContents">
-     <bool>true</bool>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_11">
+   <widget class="QLabel" name="labelTrack1">
     <property name="geometry">
      <rect>
       <x>60</x>
@@ -220,7 +163,7 @@
      <string>01 Top of the world        by Imagine Dragons</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_12">
+   <widget class="QLabel" name="labelTrack3">
     <property name="geometry">
      <rect>
       <x>60</x>
@@ -233,7 +176,7 @@
      <string>03 Sail                            by AWOLNATION</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_13">
+   <widget class="QLabel" name="labelTrack2">
     <property name="geometry">
      <rect>
       <x>60</x>
@@ -246,7 +189,7 @@
      <string>02 Girlfriend                   by Avril Lavigne</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_14">
+   <widget class="QLabel" name="labelTrack4">
     <property name="geometry">
      <rect>
       <x>60</x>
@@ -259,7 +202,7 @@
      <string>04 HELP                         by The Beatles</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_15">
+   <widget class="QLabel" name="labelTrack6">
     <property name="geometry">
      <rect>
       <x>60</x>
@@ -272,7 +215,7 @@
      <string>05 Baby                          by Justin Bieber</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_16">
+   <widget class="QLabel" name="labelTrack7">
     <property name="geometry">
      <rect>
       <x>60</x>
@@ -285,7 +228,7 @@
      <string>06 Roar                          by Katy Perry</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_17">
+   <widget class="QLabel" name="labelTrack5">
     <property name="geometry">
      <rect>
       <x>60</x>
@@ -298,7 +241,7 @@
      <string>05 Toxic                          by Britney Spears</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_18">
+   <widget class="QLabel" name="labelHappyEco">
     <property name="geometry">
      <rect>
       <x>874</x>
@@ -317,7 +260,7 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="label_19">
+   <widget class="QLabel" name="labelSadEco">
     <property name="geometry">
      <rect>
       <x>1192</x>
@@ -336,7 +279,7 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="label_20">
+   <widget class="QLabel" name="labelEmotionBar">
     <property name="geometry">
      <rect>
       <x>954</x>
@@ -355,7 +298,7 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="label_21">
+   <widget class="QLabel" name="labelUploadB">
     <property name="geometry">
      <rect>
       <x>859</x>
@@ -374,7 +317,7 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="label_22">
+   <widget class="QLabel" name="labelRecord">
     <property name="geometry">
      <rect>
       <x>1215</x>
@@ -393,7 +336,7 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="label_23">
+   <widget class="QLabel" name="labelUpload">
     <property name="geometry">
      <rect>
       <x>970</x>
@@ -406,7 +349,7 @@
      <string>Upload / Add File Path</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_24">
+   <widget class="QLabel" name="labelPlaying">
     <property name="geometry">
      <rect>
       <x>30</x>
@@ -425,7 +368,7 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="label_25">
+   <widget class="QLabel" name="labelPlayBar">
     <property name="geometry">
      <rect>
       <x>590</x>
@@ -444,7 +387,7 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="label_26">
+   <widget class="QLabel" name="labelVolume">
     <property name="geometry">
      <rect>
       <x>1110</x>
@@ -463,7 +406,7 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="label_27">
+   <widget class="QLabel" name="labelVolumeBar">
     <property name="geometry">
      <rect>
       <x>1150</x>
@@ -482,8 +425,119 @@
      <bool>true</bool>
     </property>
    </widget>
+   <widget class="QPushButton" name="playStopButton">
+    <property name="geometry">
+     <rect>
+      <x>375</x>
+      <y>715</y>
+      <width>50</width>
+      <height>50</height>
+     </rect>
+    </property>
+    <property name="palette">
+     <palette>
+      <active>
+       <colorrole role="Button">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>255</red>
+          <green>255</green>
+          <blue>255</blue>
+         </color>
+        </brush>
+       </colorrole>
+      </active>
+      <inactive>
+       <colorrole role="Button">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>255</red>
+          <green>255</green>
+          <blue>255</blue>
+         </color>
+        </brush>
+       </colorrole>
+      </inactive>
+      <disabled>
+       <colorrole role="Button">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>255</red>
+          <green>255</green>
+          <blue>255</blue>
+         </color>
+        </brush>
+       </colorrole>
+      </disabled>
+     </palette>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="text">
+     <string notr="true"/>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>images/play.png</normaloff>images/play.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>50</width>
+      <height>50</height>
+     </size>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="lastButton">
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>730</y>
+      <width>34</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>images/last.png</normaloff>images/last.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>34</width>
+      <height>20</height>
+     </size>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="nextButton">
+    <property name="geometry">
+     <rect>
+      <x>480</x>
+      <y>730</y>
+      <width>34</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>images/next.png</normaloff>images/next.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>34</width>
+      <height>20</height>
+     </size>
+    </property>
+   </widget>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="images/Untitled.qrc"/>
+ </resources>
  <connections/>
 </ui>
